<resources>
    <string name="app_name">Sing In and Sing Up</string>
    <string name="sign_in_login">Log in</string>
    <string name="activity_sign_in_hi">Hi! Welcome</string>
    <string name="sign_in_email">Email Address</string>
    <string name="sign_in_email_hint">Enter Your Email</string>
    <string name="sign_in_password_hint">Enter Your Password</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_login_btn">Log In</string>
    <string name="sing_in_forgot">Forgotten your password ?</string>
    <string name="sing_in_or_sign_in_with">Or sign in with</string>
    <string name="sing_in_not_acc">Don’t have an account ?</string>
    <string name="sign_in_create_acc">Create an Account</string>
    <string name="sing_up_create_acc">Create Account</string>
    <string name="sign_up_dis">Fill your information below or register\n with your social account</string>
    <string name="name">Name</string>
    <string name="ss">️</string>
    <string name="your_name">Your Name</string>
    <string name="birthday">Birthday</string>
    <string name="your_birthday">MM/DD/YYYY</string>
    <string name="address">Address</string>
    <string name="your_address">Enter Your Location</string>
    <string name="phone">Phone No.</string>
    <string name="your_phone">+1</string>
    <string name="next">Next</string>
    <string name="email_sign_up">Sign up</string>
    <string name="email_welcome">What’s your email?</string>
    <string name="email_email_hint">Email Address</string>
    <string name="email_1">1 of 3</string>
    <string name="otp_1">3 of 3</string>
    <string name="pass_1">2 of 3</string>
    <string name="pass_welcome">Create a Password</string>
    <string name="pass_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="pass_show">Show Password</string>
    <string name="pass_private">By signing up, you agree to our <b>Terms of Service</b> and <b>Privacy Policy</b></string>
    <string name="otp_welcome">Verify OTP</string>
    <string name="otp_hint">Please enter the code we sent you to email</string>
    <string name="otp_rec">Didn’t Receive OTP ?</string>
    <string name="otp_rec_code">Resend Code</string>
    <string name="verify">Verify</string>

</resources>