<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"

        android:text="@string/email_sign_up"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/pass_welcome"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/email_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/pass_hint"
        android:textColor="#C4C4C4"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <RadioButton
        app:layout_constraintTop_toBottomOf="@id/email_hint"
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_show"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/email_hint"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="215dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textSize="13sp"
        android:textColor="#000"
        android:text="@string/pass_1"
        app:layout_constraintBottom_toTopOf="@id/unselect"
        app:layout_constraintEnd_toEndOf="@id/unselect"/>

    <View
        android:id="@+id/unselect"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/didiver_un_bg"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintEnd_toEndOf="@id/next"
        app:layout_constraintStart_toEndOf="@id/select" />


    <View
        android:id="@+id/select"
        android:layout_width="220dp"
        android:layout_height="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/didiver_bg"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintStart_toStartOf="@id/next" />


    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/policy"
        />
<TextView
    android:layout_width="match_parent"
    android:id="@+id/policy"
    android:layout_height="wrap_content"

    android:fontFamily="@font/inter"
    android:gravity="center"
    android:textSize="11sp"
    android:layout_marginHorizontal="32dp"
    android:layout_marginBottom="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    android:text="@string/pass_private"/>


</androidx.constraintlayout.widget.ConstraintLayout>