<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".EmailActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"

        android:text="@string/email_sign_up"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/email_welcome"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/email_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/email_email_hint"
        android:textColor="#C4C4C4"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textSize="13sp"
        android:textColor="#000"
        android:text="@string/email_1"
        app:layout_constraintBottom_toTopOf="@id/unselect"
        app:layout_constraintEnd_toEndOf="@id/unselect"/>

    <View
        android:id="@+id/unselect"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/didiver_un_bg"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintEnd_toEndOf="@id/next"
        app:layout_constraintStart_toEndOf="@id/select" />


    <View
        android:id="@+id/select"
        android:layout_width="103dp"
        android:layout_height="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/didiver_bg"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintStart_toStartOf="@id/next" />


    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/inter_bold"
        android:text="@string/next"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>