<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/sing_up_create_acc"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <TextView
            android:id="@+id/dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/sign_up_dis"
            android:textColor="@color/hint"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/acc" />

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="21dp"
            android:background="@color/white"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="8dp"
            android:text="@string/name"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dis" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/edit_text_bg"
            android:elevation="-1dp"
            android:hint="@string/your_name"
            android:paddingHorizontal="32dp"
            android:paddingVertical="19dp"
            android:textColor="@color/Primary"
            android:textColorHint="@color/hint"
            app:layout_constraintTop_toBottomOf="@id/dis" />

        <TextView
            android:id="@+id/birthdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="21dp"
            android:background="@color/white"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="8dp"
            android:text="@string/birthday"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@drawable/ic_data"
            android:elevation="-1dp"
            android:hint="@string/your_birthday"
            android:inputType="date"
            android:paddingHorizontal="32dp"
            android:paddingVertical="19dp"
            android:textColor="@color/Primary"
            android:textColorHint="@color/hint"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/addressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="21dp"
            android:background="@color/white"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="8dp"
            android:text="@string/address"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthday" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/edit_text_bg"
            android:elevation="-1dp"
            android:hint="@string/your_address"
            android:paddingHorizontal="32dp"
            android:paddingVertical="19dp"
            android:textColor="@color/Primary"
            android:textColorHint="@color/hint"
            app:layout_constraintTop_toBottomOf="@id/birthday" />

        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="21dp"
            android:background="@color/white"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="8dp"
            android:text="@string/phone"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/edit_text_bg"
            android:elevation="-1dp"
            android:hint="@string/your_phone"
            android:paddingHorizontal="32dp"
            android:paddingVertical="19dp"
            android:textColor="@color/Primary"
            android:textColorHint="@color/hint"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/next"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/phone" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            app:dividerColor="#000"
            app:layout_constraintStart_toStartOf="@id/next"
            app:layout_constraintTop_toBottomOf="@id/next" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            app:dividerColor="#000"
            app:layout_constraintEnd_toEndOf="@id/next"
            app:layout_constraintTop_toBottomOf="@id/next" />

        <TextView
            android:id="@+id/or_sing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sing_in_or_sign_in_with"
            android:textColor="@color/hint"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/next" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/apple"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="77dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toStartOf="@id/google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or_sing"
            app:strokeColor="#000"
            app:strokeWidth="0.8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_apple" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/google"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="77dp"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/facebook"
            app:layout_constraintStart_toEndOf="@id/apple"
            app:layout_constraintTop_toBottomOf="@id/or_sing"
            app:strokeColor="#000"
            app:strokeWidth="0.8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_google" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/facebook"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="66dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or_sing"
            app:strokeColor="#000"
            app:strokeWidth="0.8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_facebook" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>